* Pressing Shift while using mouse movement now lets the player begin attacking.
* Using mouse movement when attacking will now correctly let the player move once the current attack is finished.
* Fixed "jittering" animation when melee attacking with mouse movement while pressing Shift.

Game changes:

* Fix the "Locked Out" quest not appearing in the completed quests list.

New translations:

* Catalan (ca) by Marc Tormo i Bochaca

Translation updates:

* German (de) update (Fyrenic)
* Scottish Gaelic (gd) update (GunChleoc)
* Brazilian Portuguese (pt_BR) update (Rui)
* Portuguese (pt) update (Rui)
* Ukranian (uk) update (Igor Paliychuk)
* Vietnamese (vi) update (Nguyễn Gia Phong)



Flare v1.08 (http://flarerpg.org/index.php/2018/09/17/flare-1-08/)

Engine fixes:

* Fixed sdl_hardware renderer not clearing top/bottom for tall windows.
* Re-create render context when "ignore_texture_filter" setting changes.
* Fixed bug where points spent on passive powers would be de-allocated after dying.
* Prevent upgrading powers with the '+' button while the player is dead.
* Fix off-by-one error when calculating loot drop rates.

Translation updates:

* German (de) update (Wuzzy2)
* French (fr) update (Simon Georges)
* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (Fabio Loli)



Flare v1.07 (http://flarerpg.org/index.php/2018/08/31/flare-1-07/)

Engine features:

* Added descriptions for some of the player stats to help clarify their purpose.
* The game now remembers if the player dismissed the quest log notification.
* Navigating cutscenes has been improved. Players can move back and forth through scenes with left/right arrows.
* Vertical scrolling cutscenes can be manually scrolled with the Up and Down keys.
* Scenes in cutscenes can now pause indefinitely by using "pause=-1".
* Added a "lifeform" flag to enemy stats. Setting it to false will display "Destroyed" instead of "Dead" when their HP reaches 0.